--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,11 @@
 .modal {
   background: rgba(0, 0, 0, 0.5);
 }
+
+.linear {
+  background: linear-gradient(
+    180deg,
+    #e9effa 0%,
+    rgba(233, 239, 250, 0.5) 100%
+  );
+}
